--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:url" content="" />
     <meta property="og:title" content="MADETOTO2 - Spin & Win" />
+    <link rel="shortcut icon" href="https://shortq.org/gmbrmadetoto2" type="image/x-icon">
     <meta property="og:description" content="Putar roda keberuntungan dan menangkan hadiah hingga 200 ribu! Gratis dan mudah." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://1.bp.blogspot.com/-56e8NokMgZg/Xw9qUODJWbI/AAAAAAAABbI/Kt7Qc_I7hvsFXmO1H0UtTKIlnKXeze9KgCNcBGAsYHQ/s1600/wasiat4d.png" />
