--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="shortcut icon" href="https://shortq.org/gmbrmadetoto2" type="image/x-icon">
     <meta property="og:description" content="Putar roda keberuntungan dan menangkan hadiah hingga 200 ribu! Gratis dan mudah." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://1.bp.blogspot.com/-56e8NokMgZg/Xw9qUODJWbI/AAAAAAAABbI/Kt7Qc_I7hvsFXmO1H0UtTKIlnKXeze9KgCNcBGAsYHQ/s1600/wasiat4d.png" />
+    <meta property="og:image" content="https://shortq.org/gmbrmadetoto2" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@replit" />
     <meta name="twitter:title" content="MADETOTO2 - Spin & Win" />
     <meta name="twitter:description" content="Putar roda keberuntungan dan menangkan hadiah hingga 200 ribu! Gratis dan mudah." />
-    <meta name="twitter:image" content="https://1.bp.blogspot.com/-56e8NokMgZg/Xw9qUODJWbI/AAAAAAAABbI/Kt7Qc_I7hvsFXmO1H0UtTKIlnKXeze9KgCNcBGAsYHQ/s1600/wasiat4d.png" />
+    <meta name="twitter:image" content="https://shortq.org/gmbrmadetoto2" />
     <title>MADETOTO2 - Spin & Win Lucky Wheel</title>
     <style>
         * {
