--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@ if(w.chaport)return;v3=w.chaport={};v3._q=[];v3._l={};v3.q=function(){v3._q.push
         }
 
         function claimPrize() {
-            window.location.href = '';
+            window.location.href = 'https://newmadetoto2.com/';
         }
 
         function celebrateWin() {
@@ -996,6 +996,7 @@ if(w.chaport)return;v3=w.chaport={};v3._q=[];v3._l={};v3.q=function(){v3._q.push
     </script>
 </body>
 </html>
+
 
 
 
